--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^2.2.0-rc.0"
+  },
+  "dependencies": {
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   }
 }
