--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "clean": "rimraf build",
+    "build": "npm run clean && webpack",
+    "serve": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -26,9 +28,11 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.2.0",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^2.2.0-rc.0"
+    "webpack": "^2.2.0-rc.0",
+    "webpack-dev-server": "^2.2.0-rc.0"
   },
   "dependencies": {
     "react": "^16.4.0",
