--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^2.2.0-rc.0",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^2.2.0-rc.0"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   }
