--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "my-blog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/build/bundle.js",
   "scripts": {
     "clean": "rimraf build",
     "build": "npm run clean && webpack",
-    "serve": "webpack-dev-server"
+    "serve": "webpack-dev-server",
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.2.0",
+    "nodemon": "^1.17.5",
     "rimraf": "^4.10.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
