--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,9 @@
   "name": "blog-backend",
   "version": "1.0.0",
   "description": "updating blog with prisma",
+  "engines": {
+    "node": "10.12.0"
+  },
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
