--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -5,4 +5,4 @@ hooks:
   post-deploy:
     - graphql get-schema -p prisma
 
-endpoint: https://website-server-0cade2ae57.herokuapp.com/
+endpoint: https://website-server-0cade2ae57.herokuapp.com/prisma-server/prod
