--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,7 +1,7 @@
 endpoint: ${env:PRISMA_ENDPOINT}
 # endpoint: https://my-website-9cc5fff626.herokuapp.com/blog/prod
 datamodel: datamodel.prisma
-secret: ${env:PRISMA_SECRET}
+# secret: ${env:PRISMA_SECRET}
 hooks:
   post-deploy:
     - graphql get-schema -p prisma
