--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next -p 3333",
-    "build": "next build",
-    "start": "next start -p $PORT",
+    "build": "next build -p $PORT",
+    "start": "next start",
     "test": "NODE_ENV=test jest --watch",
     "test-win": "SET NODE_ENV=test&& jest --watch",
     "heroku-postbuild": "next build"
